# minimalist-image-captioning

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REFERENCES.md  ReadMe.txt  pyproject.toml
.github/workflows/: quality.yml
configs/: default.yaml  quick.yaml
scripts/: download_flickr8k.py
src/minimal_captioning/: cli.py  config.py  data.py  download.py  evaluation.py  io_utils.py  metrics.py  model.py  preprocessing.py  submission.py  text.py  training.py  visuals.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_download.py  test_evaluation.py  test_metrics.py  test_model.py  test_preprocessing.py  test_submission.py  test_text.py  test_training.py  test_visuals.py
